# adt-dummy

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  script.py
charts/adt-dummy/: Chart.yaml  values.yaml
charts/adt-dummy/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
docs/: architecture.md  service.md  tooling.md  usage.md
scripts/: entrypoint.sh  http-health.sh
scripts/helpers/: psql.sh  trino.sh
src/adt_dummy/: __init__.py  cli.py  k8s.py  local.py  remote.py
src/adt_dummy/commands/: __init__.py  cluster.py  doctor.py  net.py  py.py  query.py  shell.py
src/adt_dummy/core/: __init__.py  env.py  errors.py  output.py  proc.py
src/adt_dummy/services/: __init__.py  net.py  pyrunner.py  trino.py
tests/: test_k8s.py  test_output.py  test_params.py  test_sql_readonly.py
