[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adt-dummy"
version = "0.1.2"
description = "Internal toolbox CLI"
readme = "README.md"
requires-python = "==3.9.12"
authors = [{ name = "Ivan Romanenko", email = "ivan.romanenko@raiffeisen.ru" }]
maintainers = [{ name = "Ivan Romanenko", email = "ivan.romanenko@raiffeisen.ru" }]

dependencies = [
  "trino==0.326.0",
  "urllib3==1.26.18",
  "requests==2.31.0",
  "click==8.1.7",
  "tabulate==0.9.0",
  "confluent-kafka==1.6.1",
  "numpy==1.26.4",
  "pandas==2.2.2",
  "regex==2024.5.15",
]

[project.scripts]
dami = "adt_dummy.cli:main"

[project.optional-dependencies]
test = [
  "pytest==8.4.2",
  "pytest-cov==7.0.0",
]

dev = [
  "pre-commit==3.7.1",
  "black==25.1.0",
  "isort==6.0.1",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
py_version = 39

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["adt_dummy*"]
